--- a/index.html
+++ b/index.html
@@ -4,32 +4,49 @@
     <meta charset="UTF-8">
     <title>方方的个人简历</title>
     <link rel="stylesheet" href="./a.css">
+    <script src="//at.alicdn.com/t/font_586134_69dyrnwsjug14i.js"></script>
+    <style type="text/css">
+        .icon {
+           width: 1em; height: 1em;
+           vertical-align: -0.15em;
+           fill: currentColor;
+           overflow: hidden;
+        }
+    </style>
 </head>
 <body>
-    <div class="topNavBar clearfix">
-        <a class="logo" href="#" alt="logo" style="float:left">
-            <span class="rs">RS</span><span class="card">card</span>
-        </a>
-        <nav style="float:right">
-            <ul class="clearfix">
-                <li><a href="#">关于</a></li>
-                <li><a href="#">技能</a></li>
-                <li><a href="#">作品</a></li>
-                <li><a href="#">博客</a></li>
-                <li><a href="#">日历</a></li>
-                <li><a href="#">联系方式</a></li>
-                <li><a href="#">其他</a></li>
-            </ul>
-        </nav>
+    <div class="topDiv">
+        <div class="topNavBar clearfix">
+            <a class="logo" href="#" alt="logo" style="float:left">
+                <span class="rs">RS</span><span class="card">card</span>
+            </a>
+            <nav style="float:right">
+                <ul class="clearfix">
+                    <li><a href="#">关于</a></li>
+                    <li><a href="#">技能</a></li>
+                    <li><a href="#">作品</a></li>
+                    <li><a href="#">博客</a></li>
+                    <li><a href="#">日历</a></li>
+                    <li><a href="#">联系方式</a></li>
+                    <li><a href="#">其他</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
+    <div class="bgPhoto">
+        <div class="bgColor"></div>
     </div>
     <main>
-        <div>
-            <div>
-                <div>
-                    <img src="#" alt="头像">
+        <div class="mesCard">
+            <div class="clearfix">
+                <div class="avatar">
+                    <img src="./img/avatar.jpg" alt="头像">
                 </div>
-                <span>Hello</span>
-                <div>
+                <div class="message">
+                    <span class="logoHello">Hello
+                        <span class="triangle"></span>
+                    </span>
+                    
                     <h1>方应杭</h1>
                     <p>前端开发工程师</p><hr>
                     <dl>
@@ -45,12 +62,31 @@
                 </div>
             </div>
             <footer>
-                <a href="#"><img src="" alt="..."></a>
-                <a href="#"><img src="" alt="..."></a>
-                <a href="#"><img src="" alt="..."></a>
-                <a href="#"><img src="" alt="..."></a>
-                <a href="#"><img src="" alt="..."></a>
-                <a href="#"><img src="" alt="..."></a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-twitter"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-github"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-qq"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-facebook"></use>
+                    </svg>
+                </a>
+                <a href="#">
+                    <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#icon-weibo"></use>
+                    </svg>
+                </a>
             </footer>
         </div>
         <a href="#" class="button">下载 PDF 简历</a>
