--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 </a>
             </footer>
         </div>
-        <a href="#" class="button">下载 PDF 简历</a>
-        <p>
+        <a href="./1.pdf" class="button" download>下载 PDF 简历</a>
+        <p class="introduction">
             方应杭，资深前端工程师，资深前端讲师，现在在饥人谷教前端课程。<br>
             技能：前端开发，Rails开发，Node.js开发
         </p>
