--- a/index.html
+++ b/index.html
@@ -89,30 +89,65 @@
                 </a>
             </footer>
         </div>
-        <a href="./1.pdf" class="button" download>下载 PDF 简历</a>
+        <p class="pdf">
+            <a href="./1.pdf" class="button dPdf" download>下载 PDF 简历</a>
+        </p>
         <p class="introduction">
             方应杭，资深前端工程师，资深前端讲师，现在在饥人谷教前端课程。<br>
             技能：前端开发，Rails开发，Node.js开发
         </p>
     </main>
-    <section>
-        <h2>技能</h2>
-        <ol>
-            <li>HTML5 &amp; CSS3</li>
-            <li>JavaScript</li>
-            <li>jQuery</li>
-            <li>Vue</li>
-            <li>React</li>
-            <li>HTTP</li>
+    <section class="skillSection"> 
+        <h2 class="skills">技能</h2>
+        <ol class="skillList clearfix">
+            <li>
+                <h3>HTML5 &amp; CSS3</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 10%;"></div>
+                </div>
+            </li>
+            <li>
+                <h3>JavaScript</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 70%;"></div>
+                </div>
+            </li>
+            <li>
+                <h3>jQuery</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 40%;"></div>
+                </div>
+            </li>
+            <li>
+                <h3>Vue</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 80%;"></div>
+                </div>
+            </li>
+            <li>
+                <h3>React</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 30%;"></div>
+                </div>
+            </li>
+            <li>
+                <h3>HTTP</h3>
+                <div class="progressBar">
+                    <div class="progress" style="width: 10%;"></div>
+                </div>
+            </li>
         </ol>
     </section>
-    <section>
-        <h2>作品集</h2>
-        <ol>
-            <li>所有</li>
-            <li>框架</li>
-            <li>原生JS&amp;CSS</li>
-        </ol>  
+    <section class="workSection"> 
+        <h2 class="works">作品集</h2>
+        <nav>
+            <ol class="workList clearfix">
+                <li>所有</li>
+                <li>框架</li>
+                <li>原生JS&amp;CSS</li>
+            </ol> 
+        </nav>
+         
     </section>
 </body>
 </html>
