--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <div class="bgColor"></div>
     </div>
     <main>
-        <div id="siteAbout" class="mesCard">
+        <div data-x id="siteAbout" class="mesCard">
             <div class="clearfix">
                 <div class="avatar">
                     <img src="./img/avatar.jpg" alt="头像">
@@ -162,7 +162,7 @@
             技能：前端开发，Rails开发，Node.js开发
         </p>
     </main>
-    <section id="siteSkills" class="skillSection"> 
+    <section data-x id="siteSkills" class="skillSection"> 
         <h2 class="skills">技能</h2>
         <ol class="skillList clearfix">
             <li>
@@ -203,7 +203,7 @@
             </li>
         </ol>
     </section>
-    <section id="siteWorks" class="workSection"> 
+    <section data-x id="siteWorks" class="workSection"> 
         <h2 class="works">作品集</h2>
         <nav>
             <ol class="workList clearfix">
@@ -238,10 +238,15 @@
             </div>
         </div>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/16.3.5/Tween.min.js"></script>
     <script>
-        setTimeout(function(){
-            loading.classList.remove('active')
-        },1000)
+        loading.classList.remove('active')
+
+        let specialTags = document.querySelectorAll('[data-x]')
+        for(let i=0; i<specialTags.length; i++){
+            specialTags[i].classList.add('offset')
+        }
+        highLight()
         //窗口滚动
         window.onscroll = function(){
             if(scrollY>0){
@@ -249,7 +254,29 @@
             }else{
                 topNavBar.classList.remove('sticky')
             }
+            highLight()
         }
+
+        function highLight(){
+            let specialTags = document.querySelectorAll('[data-x]')
+            let minIndex = 0
+            //let changeTag = 0
+            for(let i=0; i<specialTags.length; i++){
+                if(Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)){
+                    minIndex = i
+                }
+            }
+            let id = specialTags[minIndex].id
+            let a = document.querySelector('a[href="#' + id + '"]')
+            let li = a.parentNode
+            let brothers = li.parentNode.children
+            for(let i=0; i<brothers.length; i++){
+                brothers[i].classList.remove('highLight')
+            }
+            li.classList.add('highLight')
+            specialTags[minIndex].classList.remove('offset')
+        }
+
         let liTags = document.querySelectorAll('nav.menu > ul > li')
         for(let i=0; i<liTags.length; i++){
             liTags[i].onmouseenter = function(x){
@@ -260,7 +287,6 @@
             }
         }
         let aTags = document.querySelectorAll('nav.menu > ul > li > a')
-        console.log(aTags)
         for(let i=0; i<aTags.length; i++){
             aTags[i].onclick = function(x){
                 x.preventDefault()
@@ -268,7 +294,42 @@
                 let href = a.getAttribute('href')                
                 let element = document.querySelector(href)
                 let top = element.offsetTop
-                window.scrollTo(0, top - 80)
+                //window.scrollTo(0, top - 80)
+                var currentPostion = window.scrollY
+                var targetPostion = top - 80;
+                // var n = 30 //移动次数
+                // var scrollTime = 500 / n  //每次移动的时间
+                // var scrollSpace = (targetPostion - currentPostion)/n //每次移动的距离
+                // var i = 0
+                // var id = setInterval( ()=>{
+                //     if(i===n){
+                //         window.clearInterval(id)
+                //         return
+                //     }
+                //     i = i + 1
+                //     window.scrollTo(0, currentPostion + scrollSpace*i)
+                // }, scrollTime)
+
+                //Tween.js
+                function animate(time) {
+                    requestAnimationFrame(animate);
+                    TWEEN.update(time);
+                }
+                requestAnimationFrame(animate);
+                
+                var s = targetPostion - currentPostion
+                var t = Math.abs(s / 100) * 300
+                if(t > 500){
+                    t = 500
+                }
+                var coords = { y: currentPostion }; // Start at (0, 0)
+                var tween = new TWEEN.Tween(coords) // Create a new tween that modifies 'coords'.
+                    .to({ y: targetPostion }, t) // Move to (300, 200) in 1 second.
+                    .easing(TWEEN.Easing.Quadratic.InOut) // Use an easing function to make the animation smooth.
+                    .onUpdate(function () {
+                        window.scrollTo(0, coords.y)
+                    })
+                    .start(); // Start the tween immediately.
             }
         }
     </script>
